# grabcut

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: gh_build.yml
apps/: CMakeLists.txt  run_grabcut.cpp
cmake/: ccache.cmake  eigen_importer.cmake  setup_project.cmake  test_utils.cmake
external_deps/: CMakeLists.txt
external_deps/corrade_lean/: CMakeLists.txt
external_deps/corrade_lean/include/: CorradeArrayView.h  CorradeStridedArrayView.h
external_deps/doctest/: CMakeLists.txt
external_deps/doctest/include/: doctest.h
external_deps/eigen/: CMakeLists.txt
external_deps/maxflow/: CMakeLists.txt  graph.cpp  maxflow.cpp
external_deps/maxflow/include/: maxflow.h
external_deps/maxflow/include/maxflow/: block.h  graph.h
external_deps/stb/: CMakeLists.txt  implementation.cpp
grabcut/: CMakeLists.txt
grabcut/include/gmm/: build_gaussian.hpp  gaussian_mixture_model.hpp  gaussian_model.hpp  learn_gmm.hpp  mean_covar_precompute.hpp
grabcut/include/grabcut/: export_macros.h  fg_bg_graphcut.hpp  grabcut.h  segmentation_data.h  trimap.hpp
grabcut/include/grabcut/opencv/: grabcut.h
grabcut/include/quantization/: orchard-bauman.h  orchard-bouman.h  quantization_model.hpp
grabcut/src/: fg_bg_graphcut.cpp  grabcut.cpp  learn_gmm.cpp  orchard-bauman.cpp  orchard-bouman.cpp  segmentation_data.cpp
grabcut/src/external_priv_include/: gcgraph.hpp
grabcut/src/gmm/: gaussian_mixture_model.cpp
tests/: CMakeLists.txt  gmm_gaussian.cpp  sanity.cpp  test_gmm_mv_precompute.cpp  test_grabcut.cpp  test_quantize.cpp
